2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-27  Roman Kennke  <roman@kennke.org>

        * java/awt/MediaTracker.java: Added 2005 to copyright statement.
        * javax/swing/BoxLayout.java: Likewise.
        * javax/swing/UIManager.java: Likewise.
        * javax/swing/plaf/basic/BasicButtonListener.java: Likewise.
        * javax/swing/plaf/basic/BasicGraphicsUtils.java: Likewise.
        * javax/swing/plaf/basic/BasicLookAndFeel.java: Likewise.
        * javax/swing/plaf/basic/BasicMenuItemUI.java: Likewise.
        * javax/swing/plaf/basic/BasicScrollPaneUI.java: Likewise.
        * javax/swing/plaf/metal/MetalLookAndFeel.java: Likewise.
        * javax/swing/text/Document.java: Likewise.
        * javax/swing/text/GapContent.java: Likewise.
        * javax/swing/text/SimpleAttributeSet.java: Likewise.
        * javax/swing/tree/DefaultTreeSelectionModel.java: Likewise.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-26  Luca Barbieri  <luca.barbieri@gmail.com>

        * gnu/java/nio/channels/FileChannelImpl.java (tryLock): Pass
        'false' to native lock().
        (lock): Pass 'true' to native lock().

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-26  Tom Tromey  <tromey@redhat.com>

        * gnu/java/nio/charset/iconv/IconvCharset.java (name):
        Removed unused field.
        (IconvCharset): Updated.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-26  Tom Tromey  <tromey@redhat.com>

        * javax/swing/text/html/parser/ParserDelegator.java (callBack,
        gnu): Now package-private.
        * javax/swing/text/html/parser/DocumentParser.java (parser,
        callBack, gnu): Now package-private.
        * javax/swing/text/StringContent.java (content, setOffset,
        checkLocation): Now package-private.
        * javax/swing/text/JTextComponent.java (doc): Now